--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.0</version>
         </dependency>
+
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
@@ -40,6 +41,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!--  Jackson is used for parsing json -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -52,11 +54,14 @@
             <artifactId>ojdbc8</artifactId>
             <version>19.3.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+
+
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>json-schema-validator</artifactId>
@@ -68,6 +73,7 @@
             <artifactId>poi</artifactId>
             <version>5.2.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
